# SE3-Tracking

./: .gitignore
poseTracking/: CMakeLists.txt  SE3 tracking.sln  SE3 tracking.vcxproj  SE3 tracking.vcxproj.filters
poseTracking/data/: P_control_path.csv  SE3_PP_control_path.csv  SE3_P_control_path.csv  se2_interp_cnsmooth.csv  se2_interpolation.csv  se3_interpolation.csv
poseTracking/dll/: HR_Pro.lib
poseTracking/include/: se2_points_generator.h  se3_points_generator.h  udp_reciever.h
poseTracking/include/hans/: elfinKinematics.h  frames.hpp  frames.inl  hansTypes.h
poseTracking/matlab/: imuRobot_tracking_btrans.m  imuRobot_tracking_hardware.m  imuRobot_tracking_uniqueThread.asv  imuRobot_tracking_uniqueThread.m  plot_angular_vel.m  plot_follow_trajectory_acs.m  plot_follow_trajectory_pcs.m  plot_imu_tracking.m  plot_imu_tracking_EqualInterpret.m  plot_interpolation.m  plot_interpolation_se3.m  plotframe.m  testVelocity.asv  testVelocity.m
poseTracking/src/: efin_PoseTracker.cpp  elfinKinematics.cpp  frames.cpp  imuRobot_realtime_tracking.cpp  imuRobot_realtime_tracking_uniqueThread - 副本.cpp  imuRobot_realtime_tracking_uniqueThread_P.cpp  imuRobot_realtime_tracking_uniqueThread_PD.cpp  imuRobot_realtime_tracking_uniqueThread_PDD.cpp  imu_realtime_tracking.cpp  se2_interpolation.cpp  se2_tracker_p.cpp  se2_tracker_pd.cpp  se3_interpolation.cpp  se3_tracker_p.cpp  test_OOP.cpp
poseTracking/test/: imu_test_mutilthread_reading.cpp  test_elfin_script.cpp  test_getTCPvel.cpp  test_max_3order_filter.cpp  test_servoJ.cpp  test_servoP.cpp  udp_receive_test.cpp
(+15 files in other folders)
